# arxiv-classifier-system

./: .dockerignore  .gitignore  README.md  gradio_demo.py  main.py  pyproject.toml
backend/api/: apps.py  serializers.py  urls.py  views.py
backend/core/: settings.py  urls.py  wsgi.py
configs/: category_config.json  sweep_config.yaml  training_config.json
docker/: .env.example  Dockerfile.api  Dockerfile.gradio  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  requirements.txt
notebooks/: 01_eda_and_dataset_processing.ipynb
scripts/: evaluate.py  train.py  train_sweep.py
src/arxiv_classifier/: __init__.py  config.py
src/arxiv_classifier/inference/: __init__.py  engine.py  schemas.py
src/arxiv_classifier/models/: __init__.py  base.py  baseline.py  sci_bert_classifier.py  specter.py
src/arxiv_classifier/training/: __init__.py  metrics.py  sweep_trainer.py  trainer.py
src/arxiv_classifier/utils/: __init__.py  losses.py  metrics.py
tests/: __init__.py  conftest.py  test_all_models.py  test_api.py
